style.css
* {
    margin: 0;
    padding: 0;
    list-style:none;
    border:0;
}

body {
    font-family: 'Roboto', sans-serif;
    background: #1F2937;
}

.second, .fourth {
    background: #fff;
}

.second {
    text-align: center;
}

.third {
    background: #E5E7EB;
    padding: 130px 560px 100px;
}

.fourth {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 100px;
}

.first {
    width: 1030px;
    margin: auto;
}

.header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 18px 0 124px 0;
}

#header-logo {
    color: #F9FAF8;
    font-size: 24px;
    font-weight: 800;
}

#header-link-list {
    display: flex;
    gap: 24px;
    color: #E5E7EB;
    font-size: 18px;
}

.first-main {
    display: flex;
    padding-bottom: 135px;
}

.first-main-left {
    flex: 1;
}

.first-main-right {
    flex: 1;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #6d747d;
}

#hero-main-text {
    font-size: 48px;
    font-weight: 800;
    color: #F9FAF8;
}

#hero-secondary-text {
    color: #E5E7EB;
    font-size: 18px;
    width: 450px;
    padding-bottom: 12px;
}

#first-button {
    background: #3882F6;
    padding: 8px 35px;
    border-radius: 8px;
    color: #F9FAF8;
    font-weight: 800;
    font-size: 18px;
}

#first-main-right-text {
    color: #E5E7EB;
    font-size: 18px;
}

#second-heading-header {
    color: #1F2937;
    font-size: 36px;
    font-weight: 800;
    padding: 50px;
}

.second-containers {
    display: flex;
    justify-content: center;
    gap: 57px;
    padding-bottom: 120px;
    color: #4b5563;
}

.boxes {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 165px;
    font-size: 18px;
}

.box {
    width: 165px;
    height: 165px;
    border: 4px solid #3b82f6;
    border-radius: 16px;
    margin-bottom: 8px;
}

#inspiring-quote {
    font-size: 36px;
    color: #1F2937;
    font-style: italic;
    font-weight: 300;
}

#thor-signature {
    justify-content: flex-end;
    display: flex;
    margin-right: 33px;
    font-size: 24px;
    font-weight: 700;
    color: #1f2937;
}

.ad-banner {
    width: 780px;
    background: #3882F6;
    padding: 55px 125px;
    border-radius: 8px;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

#ad-banner-text-one {
    color: #F9FAF8;
    font-size: 24px;
    font-weight: 700;
}

#ad-banner-text-two {
    font-size: 18px;
    color: #E5E7EB;
}

#ad-banner-sign-up-button {
    background: #3882F6;
    border: 2px solid #F9FAF8;
    padding: 7px 32px;
    border-radius: 8px;
    font-weight: 800;
    color: #F9FAF8;
    font-size: 18px;
}

.footer {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100px;
    color: #e5e7eb;
    font-size: 18px;
}

